--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
-    maven{ url "http://repo1.maven.org/maven2/"}
+    maven{ url "http://maven.aliyun.com/nexus/content/groups/public/"}
 }
 ext {
     appName = "eroom"
